update docker file

--- a/TensorFlow con Docker/Dockerfile
+++ b/TensorFlow con Docker/Dockerfile
@@ -8,9 +8,9 @@ RUN pip install pandas
 RUN pip install plotly
 RUN pip install tflearn
 RUN pip install asq
+RUN tensorboard --logdir=run1:/tmp/tensorflow_logs/neurona/ --port 6006
 
 EXPOSE 6006 
 EXPOSE 8886 
 EXPOSE 8888
 ENTRYPOINT /bin/bash
-tensorboard --logdir=run1:/tmp/tensorflow_logs/neurona/ --port 6006
