--- a/TensorFlow con Docker/Dockerfile
+++ b/TensorFlow con Docker/Dockerfile
@@ -8,7 +8,7 @@ RUN pip install pandas
 RUN pip install plotly
 RUN pip install tflearn
 RUN pip install asq
-RUN tensorboard --logdir=run1:/tmp/tensorflow_logs/neurona/ --port 6006
+#RUN tensorboard --logdir=run1:/tmp/tensorflow_logs/neurona/ --port 6006
 
 EXPOSE 6006 
 EXPOSE 8886 
