update readme, docker file and docker compose files

--- a/TensorFlow con Docker/Dockerfile
+++ b/TensorFlow con Docker/Dockerfile
@@ -16,4 +16,4 @@ RUN pip install tensorflow --upgrade
 EXPOSE 6006 
 EXPOSE 8886 
 EXPOSE 8888
-ENTRYPOINT /bin/bash
+ENTRYPOINT "jupyter notebook" /bin/bash
