--- a/TensorFlow con Docker/docker-compose.yml
+++ b/TensorFlow con Docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   container_name: jupyter
   build: .
   volumes:
-   - /files:/notebooks
+   - ./files:/notebooks
   ports:
    - "8888:8888"
    - "6006:6006"
