udpate fixes in entrenamiento file

--- a/TensorFlow con Docker/Dockerfile
+++ b/TensorFlow con Docker/Dockerfile
@@ -9,6 +9,11 @@ RUN pip install pandas
 RUN pip install plotly
 RUN pip install tflearn
 RUN pip install asq
+RUN pip install opencv-python
+RUN apt update && apt install -y libsm6 libxext6
+RUN apt-get install -y libxrender-dev
+RUN pip install -U scikit-learn
+RUN python -m pip install --user numpy scipy
 # RUN apt-get install python3-matplotlib
 # RUN apt-get install python-matplotlib
 RUN pip install tensorflow --upgrade
