remove cuda from dockerfile

--- a/TensorFlow con Docker/Dockerfile
+++ b/TensorFlow con Docker/Dockerfile
@@ -1,7 +1,9 @@
 FROM tensorflow/tensorflow:latest-gpu
 MAINTAINER Jorge Santos
 
+COPY ./keyboard /etc/default/keyboard
 RUN apt-get update 
+# && apt-get install -yq keyboard-configuration
 RUN apt-get install -y git
 RUN apt-get install wget
 RUN pip install --upgrade pip
@@ -18,15 +20,14 @@ RUN apt-get update && apt install -y libsm6 libxext6
 RUN apt-get install -y libxrender-dev
 RUN pip install -U scikit-learn
 RUN apt-get install python-opencv -y
-RUN apt-get --yes --force-yes install cuda
-# RUN sudo apt-get --yes --force-yes install cuda-runtime-7-0
-# RUN sudo apt-get --yes --force-yes install cuda-7-0
-# RUN sudo apt-get --yes --force-yes install libcuda1-384  
-# RUN sudo apt-get --yes --force-yes install nvidia-361-dev
-# RUN sudo apt-get --yes --force-yes install libdc1394-22-dev libdc1394-22 libdc1394-utils
-# RUN sudo apt-get --yes --force-yes uninstall pip ipykernel
-
-
+RUN apt-get update
+# RUN apt-get --yes install libcuda1-384  
+# RUN apt-get --yes install cuda
+# RUN apt-get --yes --force-yes install cuda-runtime-7-0
+# RUN apt-get --yes --force-yes install cuda-7-0
+# RUN apt-get --yes --force-yes install nvidia-361-dev
+# RUN apt-get --yes --force-yes install libdc1394-22-dev libdc1394-22 libdc1394-utils
+ 
 # RUN apt-get install python3-matplotlib
 # RUN apt-get install python-matplotlib
 # RUN sudo pip install tensorflow --upgrade
